--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/gurman.png" alt="gurman profile picture"></td>
+      <td><img src="./images/gurman.png" alt="gurman profile picture"></td>
       <td>
         <h1>Gurmanshaan Singh</h1>
       <!--  <p><em>Trainee at <strong> <a href="https://www.cssoftsolutions.com/"> CS Soft Solutions </a></strong> </em></p> -->
